Changelog
=========


1.11.4 (unreleased)
-------------------

- Reload page if drag&drop upload has failed.
  [elioschmutz]


1.11.3 (2016-01-05)
-------------------

- Fix journal action translation for files
  [elioschmutz]

- Fix drag'n'drop for files in Firefox.
  [Kevin Bieri]

- Fix regression when trying to link files in TinyMCE.
  The problem was that only images were linkable.
  [jone]

- Fix tests for new colorbox version.
  [tschanzt]


1.11.2 (2015-09-10)
-------------------

- Details view: refactor template binding for easeier subclassing.
  By moving the template binding to python code, subclasses can still render
  the default template conditionally.
  [jone]


1.11.1 (2015-09-09)
-------------------

- Fix jsondetails function, so it doesn't crash when not finding scales.
  [tschanzt]


1.11.0 (2015-09-08)
-------------------

- Remove icon effect when replacing file.
  [jone]

- Add adjustments to integrate bumblebee
    - Trigger event dndUploadViewUpdated if drag&drop is finished
    - Trigger ObjectEditedEvent from Products.Archetypes instead zope.
      lifecycleevent after quickupload
    - Register a resource-directory: ftw.file.resources
    - Create a FileMetadata utility

  [elioschmutz]

- Fix Outputfilter, so it does work with scaled images.
  [tschanzt]

- Integrate ftw.file images with TinyMCE.
  [lknoepfel]

- Only load ftw.activity 1.x representation if ftw.activity 1.x is installed.
  [mathias.leimgruber]

- Show a hint about the imminent file replacement in the dropzone overlay.
  [mbaechtold]

- Make sure object modified is fired on quickupload.
  [lknoepfel]

- Check for file type before dragging
  [Kevin Bieri]


1.10.0 (2014-12-16)
-------------------

- The file can be replaced with drag'n'drop (modern browsers only).
  [mbaechtold]


1.9.0 (2014-09-15)
------------------

- ftw.activity integration: display preview image in activity stream.
  [jone]

- Use ftw.profilehook instead of custom import steps (setuphandlers).